{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 322,
  "lineage": "7dce7d81-4c76-0c5e-b8c4-67b7bda6645c",
  "resources": [
    {
      "module": "module.main.module.backend_service",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/zones/us-central1-a/instanceGroups/kpmg-instancegroup",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-01-13T07:11:11.774-08:00",
            "enable_cdn": false,
            "fingerprint": "0GKhXOzurcg=",
            "generated_id": 6230062808641096288,
            "health_checks": [
              "projects/emerald-circle-374316/global/httpHealthChecks/kpmg-http-health"
            ],
            "id": "projects/emerald-circle-374316/global/backendServices/kpmg-backservice",
            "load_balancing_scheme": "EXTERNAL",
            "name": "kpmg-backservice",
            "port_name": "http",
            "project": "emerald-circle-374316",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/backendServices/kpmg-backservice",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.main.module.autoscale_instancegroup.google_compute_health_check.autohealing",
            "module.main.module.autoscale_instancegroup.google_compute_instance_group_manager.group_instance_man",
            "module.main.module.backend_service.google_compute_http_health_check.default",
            "module.main.module.intance_template_module.google_compute_instance_template.name",
            "module.main.module.intance_template_module.google_service_account.service_account",
            "module.main.module.vpc_main.google_compute_firewall.firewall_rule",
            "module.main.module.vpc_main.google_compute_network.vpc_nw",
            "module.main.module.vpc_main.google_compute_subnetwork.subnet_nw"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/emerald-circle-374316/global/forwardingRules/kpmg-forward-rule",
            "ip_address": "34.110.190.180",
            "ip_protocol": "TCP",
            "ip_version": "IPV4",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "kpmg-forward-rule",
            "port_range": "80",
            "project": "emerald-circle-374316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/forwardingRules/kpmg-forward-rule",
            "target": "projects/emerald-circle-374316/global/targetHttpProxies/kpmg-http-proxy"
          },
          "dependencies": [
            "module.main.module.autoscale_instancegroup.google_compute_health_check.autohealing",
            "module.main.module.autoscale_instancegroup.google_compute_instance_group_manager.group_instance_man",
            "module.main.module.backend_service.google_compute_backend_service.default",
            "module.main.module.backend_service.google_compute_http_health_check.default",
            "module.main.module.intance_template_module.google_compute_instance_template.name",
            "module.main.module.intance_template_module.google_service_account.service_account",
            "module.main.module.loadbalancer.google_compute_target_http_proxy.default",
            "module.main.module.loadbalancer.google_compute_url_map.default",
            "module.main.module.vpc_main.google_compute_firewall.firewall_rule",
            "module.main.module.vpc_main.google_compute_network.vpc_nw",
            "module.main.module.vpc_main.google_compute_subnetwork.subnet_nw"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-13T07:11:47.141-08:00",
            "id": "projects/emerald-circle-374316/global/targetHttpProxies/kpmg-http-proxy",
            "name": "kpmg-http-proxy",
            "project": "emerald-circle-374316",
            "proxy_bind": false,
            "proxy_id": 1963171765394655836,
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/targetHttpProxies/kpmg-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/urlMaps/kpmg-url-map"
          },
          "dependencies": [
            "module.main.module.autoscale_instancegroup.google_compute_health_check.autohealing",
            "module.main.module.autoscale_instancegroup.google_compute_instance_group_manager.group_instance_man",
            "module.main.module.backend_service.google_compute_backend_service.default",
            "module.main.module.backend_service.google_compute_http_health_check.default",
            "module.main.module.intance_template_module.google_compute_instance_template.name",
            "module.main.module.intance_template_module.google_service_account.service_account",
            "module.main.module.loadbalancer.google_compute_url_map.default",
            "module.main.module.vpc_main.google_compute_firewall.firewall_rule",
            "module.main.module.vpc_main.google_compute_network.vpc_nw",
            "module.main.module.vpc_main.google_compute_subnetwork.subnet_nw"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-13T07:11:34.777-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/backendServices/kpmg-backservice",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "J0T68qevJVo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/emerald-circle-374316/global/urlMaps/kpmg-url-map",
            "map_id": 4742206491433159241,
            "name": "kpmg-url-map",
            "path_matcher": [],
            "project": "emerald-circle-374316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/urlMaps/kpmg-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.autoscale_instancegroup.google_compute_health_check.autohealing",
            "module.main.module.autoscale_instancegroup.google_compute_instance_group_manager.group_instance_man",
            "module.main.module.backend_service.google_compute_backend_service.default",
            "module.main.module.backend_service.google_compute_http_health_check.default",
            "module.main.module.intance_template_module.google_compute_instance_template.name",
            "module.main.module.intance_template_module.google_service_account.service_account",
            "module.main.module.vpc_main.google_compute_firewall.firewall_rule",
            "module.main.module.vpc_main.google_compute_network.vpc_nw",
            "module.main.module.vpc_main.google_compute_subnetwork.subnet_nw"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc_main",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-01-13T07:10:10.052-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/emerald-circle-374316/global/firewalls/k-firewall",
            "log_config": [],
            "name": "k-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/networks/k-vpc",
            "priority": 1000,
            "project": "emerald-circle-374316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/firewalls/k-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.module.vpc_main.google_compute_network.vpc_nw"
          ]
        }
      ]
    },
    {
      "module": "module.main.module.vpc_main",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_nw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/emerald-circle-374316/global/networks/k-vpc",
            "mtu": 0,
            "name": "k-vpc",
            "project": "emerald-circle-374316",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/networks/k-vpc"
          }
        }
      ]
    },
    {
      "module": "module.main.module.vpc_main",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_nw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-13T07:10:11.198-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/emerald-circle-374316/regions/us-central1/subnetworks/k-sub",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "k-sub",
            "network": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/global/networks/k-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "emerald-circle-374316",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emerald-circle-374316/regions/us-central1/subnetworks/k-sub",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.main.module.vpc_main.google_compute_network.vpc_nw"
          ]
        }
      ]
    }
  ]
}